Change author and update blog description
Updated author details and blog description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: System-on-Chip Design & Verification
 author:
-  name: Michelle Lynch
-  email: your-email@domain.com
-description: "A blog."
+  name: Bartlomiej Drapinski
+  email: g00428194@atu.ie
+description: "FGPA VGA Project Blog"
 
 # Build settings
 remote_theme: jekyll/minima
